# wasm-libigl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  init.sh  package.json
cmake/: libigl.cmake
src/: main.cpp
